# AnnotationFlow

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  run.sh  setup.sh
backend/: Dockerfile  pyproject.toml  requirements.txt  run.sh  run_guardrails_batch.py  run_guardrails_parallel.py  setup.sh
backend/app/: __init__.py  config.py  dataset_splitter.py  duplicate_detector.py  image_normalizer.py  jobs.py  main.py  roboflow_client.py  yolo_writer.py
backend/tests/: test_api_jobs.py  test_dataset_splitter.py  test_duplicate_detector.py  test_health.py  test_image_normalizer.py  test_jobs.py  test_roboflow_client.py  test_yolo_writer.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  run.sh  setup.sh
frontend/src/: main.tsx  styles.css
frontend/tests/: test_frontend_source.py
mobile/: App.tsx  Dockerfile  package.json
mobile/tests/: test_mobile_source.py
